thepool/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thepool
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: thepool
  template:
    metadata:
      labels:
        app: thepool
    spec:
      containers:
        - name: thepool
          image: ghcr.io/pmh-only/thepool:latest
