thepool/service.yml
apiVersion: v1
kind: Service
metadata:
  name: thepool-service
spec:
  selector:
    app: thepool
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
