thepool/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thepool-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: pool.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thepool-service
            port:
              number: 8080
